# weather-ai-test

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_tests.py  test_import.py  test_routes.py
.github/environments/: canary  production
.github/workflows/: deploy.yml  test.yml
app/: config.py  exceptions.py  main.py  middleware.py  models.py
app/routes/: __init__.py  dashboard.py  weather.py
app/services/: auth_service.py  weather_service.py
app/templates/: dashboard.html  index.html
scripts/: test_endpoints.py
static/styles/: dashboard.css  style.css
tests/: conftest.py  test_api.py  test_auth_service.py  test_config.py  test_endpoints.py
